--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -359,8 +359,8 @@ crossorigin=""/>
               <span lang="fr">Les bases créatives : </span>
               <span lang="en">Creatives bases : </span>
             </li>
-              <span lang="fr">Ce sont celles qui innovent. Elles ont pour objectif de représenter un thème olfactif ou l’odeur d’un produit de consommation, non extractible. La base Chocovan®, la Cassis Base 345 F® ou encore le Nectarol® ont cette visée.</span>
-              <span lang="en">These are the ones which innovate. They aim to represent an olfactory theme, or the smell of a consumer product, not extractable. Chocovan®, Cassis Base 345 F® or Nectarol® have this aim.</span>
+              <span lang="fr">Ce sont celles qui innovent. Elles ont pour objectif de représenter un thème olfactif ou l’odeur d’un produit de consommation, non extractible. La base <a class="interpop" href="../ingredients/Chocovan®__Chocovan®.html" target="_blank">Chocovan®</a>, la <a class="interpop" href="../ingredients/Cassis_Base_345_F®__Cassis_Base_345_F®.html" target="_blank">Cassis Base 345 F®</a> ou encore le <a class="interpop" href="../ingredients/Nectarol®__Nectarol®.html" target="_blank">Nectarol®</a> ont cette visée.</span>
+              <span lang="en">These are the ones which innovate. They aim to represent an olfactory theme, or the smell of a consumer product, not extractable. <a class="interpop" href="../ingredients/Chocovan®__Chocovan®.html" target="_blank">Chocovan®</a>, <a class="interpop" href="../ingredients/Cassis_Base_345_F®__Cassis_Base_345_F®.html" target="_blank">Cassis Base 345 F®</a> or <a class="interpop" href="../ingredients/Nectarol®__Nectarol®.html" target="_blank">Nectarol®</a> have this aim.</span>
           </ol>
         </p>  
       </li>
