--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -267,6 +267,12 @@ crossorigin=""/>
               </li>
                 <span lang="fr">Obtenues par entrainement à la vapeur d’eau des composés odorants de la plante. La vapeur d’eau possède effectivement la faculté de se mélanger aux composés odorants, pour s’en séparer par décantation à l’état liquide après condensation des vapeurs.</span>
                 <span lang="en">Obtained by hydrodistillation of the plant's odorous compounds. Steam has the ability to mix with the odorous compounds, to be separated from them by decantation in a liquid state, after condensation of the vapours.</span>
+                <p class="exemple">
+                  <div class="row col-12" style="background-color: blue; ">
+                    <img class="offset-1 col-2"
+                    src="../img/matieres_premieres/Ylang-Ylang I.jpg" alt="Ylang-Ylang I - Ylang-Ylang I (N°Cas : 8006-81-3)" title="Ylang-Ylang I - Ylang-Ylang I (N°Cas : 8006-81-3)">
+                  </div>
+                </p>
               <li class="catégories2">
                 <span lang="fr">Les distillations sèches : </span>
                 <span lang="en">Dry distillation :</span>
