--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -269,7 +269,11 @@ crossorigin=""/>
                 <span lang="en">Obtained by hydrodistillation of the plant's odorous compounds. Steam has the ability to mix with the odorous compounds, to be separated from them by decantation in a liquid state, after condensation of the vapours.</span>
                 <p class="exemple">
                   <div class="row col-12" style="background-color: blue; ">
-                    <img class="offset-1 col-2"
+                    <img class="offset-1 col-3"
+                    src="../img/matieres_premieres/Ylang-Ylang I.jpg" alt="Ylang-Ylang I - Ylang-Ylang I (N°Cas : 8006-81-3)" title="Ylang-Ylang I - Ylang-Ylang I (N°Cas : 8006-81-3)">
+                    <img class="offset-1 col-3"
+                    src="../img/matieres_premieres/Ylang-Ylang I.jpg" alt="Ylang-Ylang I - Ylang-Ylang I (N°Cas : 8006-81-3)" title="Ylang-Ylang I - Ylang-Ylang I (N°Cas : 8006-81-3)">
+                    <img class="offset-1 col-3"
                     src="../img/matieres_premieres/Ylang-Ylang I.jpg" alt="Ylang-Ylang I - Ylang-Ylang I (N°Cas : 8006-81-3)" title="Ylang-Ylang I - Ylang-Ylang I (N°Cas : 8006-81-3)">
                   </div>
                 </p>
