--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -268,13 +268,15 @@ crossorigin=""/>
                 <span lang="fr">Obtenues par entrainement à la vapeur d’eau des composés odorants de la plante. La vapeur d’eau possède effectivement la faculté de se mélanger aux composés odorants, pour s’en séparer par décantation à l’état liquide après condensation des vapeurs.</span>
                 <span lang="en">Obtained by hydrodistillation of the plant's odorous compounds. Steam has the ability to mix with the odorous compounds, to be separated from them by decantation in a liquid state, after condensation of the vapours.</span>
                 <p class="exemple">
+                  <span lang="fr"><u>Exemple:</u> Il existe de très nombreuses plantes ou épices dont l'huile essentielle est extraite par distillation. Parmi elles, l'Ylang-Ylang, le Galbanum ou encore la Noix de Muscade</span>
+                  <span lang="fr"><u>Exemple:</u> Il existe de très nombreuses plantes ou épices dont l'huile essentielle est extraite par distillation. Parmi elles, l'Ylang-Ylang, le Galbanum ou encore la Noix de Muscade</span>
                   <div class="row col-12" style="background-color: blue; ">
                     <img class="offset-1 col-3"
                     src="../img/matieres_premieres/Ylang-Ylang I.jpg" alt="Ylang-Ylang I - Ylang-Ylang I (N°Cas : 8006-81-3)" title="Ylang-Ylang I - Ylang-Ylang I (N°Cas : 8006-81-3)">
                     <img class="offset-1 col-3"
-                    src="../img/matieres_premieres/Ylang-Ylang I.jpg" alt="Ylang-Ylang I - Ylang-Ylang I (N°Cas : 8006-81-3)" title="Ylang-Ylang I - Ylang-Ylang I (N°Cas : 8006-81-3)">
+                    src="../img/matieres_premieres/Galbanum HE.jpg" alt="Galbanum EO - Galbanum HE (N°Cas : 8023-91-4)" title="Galbanum EO - Galbanum HE (N°Cas : 8023-91-4)">
                     <img class="offset-1 col-3"
-                    src="../img/matieres_premieres/Ylang-Ylang I.jpg" alt="Ylang-Ylang I - Ylang-Ylang I (N°Cas : 8006-81-3)" title="Ylang-Ylang I - Ylang-Ylang I (N°Cas : 8006-81-3)">
+                    src="../img/matieres_premieres/Noix de Muscade HE.jpg" alt="Nutmeg EO - Noix de Muscade HE (N°Cas : 84082-68-8)" title="Nutmeg EO - Noix de Muscade HE (N°Cas : 84082-68-8)">
                   </div>
                 </p>
               <li class="catégories2">
