--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -267,10 +267,10 @@ crossorigin=""/>
               </li>
                 <span lang="fr">Obtenues par entrainement à la vapeur d’eau des composés odorants de la plante. La vapeur d’eau possède effectivement la faculté de se mélanger aux composés odorants, pour s’en séparer par décantation à l’état liquide après condensation des vapeurs.</span>
                 <span lang="en">Obtained by hydrodistillation of the plant's odorous compounds. Steam has the ability to mix with the odorous compounds, to be separated from them by decantation in a liquid state, after condensation of the vapours.</span>
-                <p class="exemple">
+                <p class="exemple mt-3 mb-0">
                   <span lang="fr"><u>Exemple:</u> Il existe de très nombreuses plantes ou épices dont l'huile essentielle est extraite par distillation. Parmi elles, l'Ylang-Ylang, le Galbanum ou encore la Noix de Muscade</span>
                   <span lang="fr"><u>Exemple:</u> Il existe de très nombreuses plantes ou épices dont l'huile essentielle est extraite par distillation. Parmi elles, l'Ylang-Ylang, le Galbanum ou encore la Noix de Muscade</span>
-                  <div class="row col-12" style="background-color: blue; ">
+                  <div class="row col-12 mt-1" style="background-color: blue; ">
                     <img class="offset-1 col-3"
                     src="../img/matieres_premieres/Ylang-Ylang I.jpg" alt="Ylang-Ylang I - Ylang-Ylang I (N°Cas : 8006-81-3)" title="Ylang-Ylang I - Ylang-Ylang I (N°Cas : 8006-81-3)">
                     <img class="offset-1 col-3"
