--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -271,11 +271,11 @@ crossorigin=""/>
                   <span lang="fr"><u>Exemple:</u> Il existe de très nombreuses plantes ou épices dont l'huile essentielle est extraite par distillation. Parmi elles, l'Ylang-Ylang, le Galbanum ou encore la Noix de Muscade</span>
                   <span lang="fr"><u>Exemple:</u> Il existe de très nombreuses plantes ou épices dont l'huile essentielle est extraite par distillation. Parmi elles, l'Ylang-Ylang, le Galbanum ou encore la Noix de Muscade</span>
                   <div class="row col-12 mt-1" style="background-color: blue; ">
-                    <img class="offset-1 col-3"
+                    <img class="offset-1 col-3 imgingredient"
                     src="../img/matieres_premieres/Ylang-Ylang I.jpg" alt="Ylang-Ylang I - Ylang-Ylang I (N°Cas : 8006-81-3)" title="Ylang-Ylang I - Ylang-Ylang I (N°Cas : 8006-81-3)">
-                    <img class="offset-1 col-3"
+                    <img class="offset-1 col-3 imgingredient"
                     src="../img/matieres_premieres/Galbanum HE.jpg" alt="Galbanum EO - Galbanum HE (N°Cas : 8023-91-4)" title="Galbanum EO - Galbanum HE (N°Cas : 8023-91-4)">
-                    <img class="offset-1 col-3"
+                    <img class="offset-1 col-3 imgingredient"
                     src="../img/matieres_premieres/Noix de Muscade HE.jpg" alt="Nutmeg EO - Noix de Muscade HE (N°Cas : 84082-68-8)" title="Nutmeg EO - Noix de Muscade HE (N°Cas : 84082-68-8)">
                   </div>
                 </p>
