--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -270,7 +270,7 @@ crossorigin=""/>
                 <p class="exemple mt-3 mb-0">
                   <span lang="fr"><u>Exemple:</u> Il existe de très nombreuses plantes ou épices dont l'huile essentielle est extraite par distillation. Parmi elles, l'Ylang-Ylang, le Galbanum ou encore la Noix de Muscade</span>
                   <span lang="fr"><u>Exemple:</u> Il existe de très nombreuses plantes ou épices dont l'huile essentielle est extraite par distillation. Parmi elles, l'Ylang-Ylang, le Galbanum ou encore la Noix de Muscade</span>
-                  <div class="row col-12 mt-1" style="background-color: blue; ">
+                  <div class="row col-12 mt-1">
                     <img class="offset-1 col-3 imgingredient"
                     src="../img/matieres_premieres/Ylang-Ylang I.jpg" alt="Ylang-Ylang I - Ylang-Ylang I (N°Cas : 8006-81-3)" title="Ylang-Ylang I - Ylang-Ylang I (N°Cas : 8006-81-3)">
                     <img class="offset-1 col-3 imgingredient"
