--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -242,7 +242,7 @@ crossorigin=""/>
         <span class="titreMP" lang="en">NATURAL INGREDIENTS:</span> 
 
       <p class="mt-2 mb-2">
-        <img class="imgMP1" src="../img/ingredientsnaturels.PNG" alt="Les ingrédients naturels proviennent de la flore des 4 coins du monde" title="Les ingrédients naturels proviennent de la flore des 4 coins du monde">
+        <p><img class="imgMP1" src="../img/ingredientsnaturels.PNG" alt="Les ingrédients naturels proviennent de la flore des 4 coins du monde" title="Les ingrédients naturels proviennent de la flore des 4 coins du monde"></p>
         <span lang="fr">Ce type d'ingrédient a toujours eu la cote dans les parfums. Néanmoins, bien qu’ils soient très prisés des parfumeurs et des consommateurs, ils présentent plusieurs désavantages. La grande majorité des matières premières naturelles sont issues de <b>végétaux</b>. Il était autrefois possible d’utiliser des matières premières <b>animales</b>, mais elles sont aujourd’hui <u>disparues pour des raisons d’éthique et de réglementation</u>. </span>
         <span lang="en">This type of ingredient has always been popular in perfumes. Nevertheless, although they are cherished by perfumers and consumers, they have several disadvantages.The vast majority of natural raw materials are derived from <b>plants</b>. It was once possible to use <b>animal</b>-sourced raw materials, but they have <u>now disappeared for ethical and regulatory reasons.</u></span>
 
@@ -270,8 +270,8 @@ crossorigin=""/>
                 <p class="exemple mt-3 mb-0">
                   <span lang="fr"><u>Exemple:</u> Il existe de très nombreuses plantes ou épices dont l'huile essentielle est extraite par distillation. Parmi elles, l'<a class="interpop" href="../ingredients/Ylang-Ylang_Extra_EO__Ylang-Ylang_Extra_HE.html" target="_blank">Ylang-Ylang</a>, le <a class="interpop" href="../ingredients/Galbanum_EO__Galbanum_HE.html" target="_blank">Galbanum</a> ou encore la <a class="interpop" href="../ingredients/Nutmeg_EO__Noix_de_Muscade_HE.html" target="_blank">Noix de Muscade</a></span>
                   <span lang="en"><u>Example:</u> There are many plants or spices from which the essential oil is extracted by distillation. Among them, <a class="interpop" href="../ingredients/Ylang-Ylang_Extra_EO__Ylang-Ylang_Extra_HE.html" target="_blank">Ylang-Ylang</a>, <a class="interpop" href="../ingredients/Galbanum_EO__Galbanum_HE.html" target="_blank">Galbanum</a> or <a class="interpop" href="../ingredients/Nutmeg_EO__Noix_de_Muscade_HE.html" target="_blank">Nutmeg</a>.</span>
-                  
-                  <div class="row col-12 mt-2">
+
+                  <div class="row col-12 mt-2"> 
                     <img class="offset-2 col-3 imgingredient"
                     src="../img/matieres_premieres/Ylang-Ylang I.jpg" alt="Ylang-Ylang I - Ylang-Ylang I (N°Cas : 8006-81-3)" title="Ylang-Ylang I - Ylang-Ylang I (N°Cas : 8006-81-3)">
                     <img class="offset-1 col-3 imgingredient"
