--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -242,7 +242,9 @@ crossorigin=""/>
         <span class="titreMP" lang="en">NATURAL INGREDIENTS:</span> 
 
       <p class="mt-2 mb-2">
-        <p style="align-items: center;"><img class="imgMP1" src="../img/ingredientsnaturels.PNG" alt="Les ingrédients naturels proviennent de la flore des 4 coins du monde" title="Les ingrédients naturels proviennent de la flore des 4 coins du monde"></p>
+        <p style="align-items: center;">
+          <img class="imgMP1" src="../img/ingredientsnaturels.PNG" alt="Les ingrédients naturels proviennent de la flore des 4 coins du monde" title="Les ingrédients naturels proviennent de la flore des 4 coins du monde">
+        </p>
         <p><span lang="fr">Ce type d'ingrédient a toujours eu la cote dans les parfums. Néanmoins, bien qu’ils soient très prisés des parfumeurs et des consommateurs, ils présentent plusieurs désavantages. La grande majorité des matières premières naturelles sont issues de <b>végétaux</b>. Il était autrefois possible d’utiliser des matières premières <b>animales</b>, mais elles sont aujourd’hui <u>disparues pour des raisons d’éthique et de réglementation</u>. </span>
         <span lang="en">This type of ingredient has always been popular in perfumes. Nevertheless, although they are cherished by perfumers and consumers, they have several disadvantages.The vast majority of natural raw materials are derived from <b>plants</b>. It was once possible to use <b>animal</b>-sourced raw materials, but they have <u>now disappeared for ethical and regulatory reasons.</u></span></p>
 
