--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -273,7 +273,7 @@ crossorigin=""/>
                   <span lang="fr"><u>Exemple:</u> Il existe de très nombreuses plantes ou épices dont l'huile essentielle est extraite par distillation. Parmi elles, l'<a class="interpop" href="../ingredients/Ylang-Ylang_Extra_EO__Ylang-Ylang_Extra_HE.html" target="_blank">Ylang-Ylang</a>, le <a class="interpop" href="../ingredients/Galbanum_EO__Galbanum_HE.html" target="_blank">Galbanum</a> ou encore la <a class="interpop" href="../ingredients/Nutmeg_EO__Noix_de_Muscade_HE.html" target="_blank">Noix de Muscade</a></span>
                   <span lang="en"><u>Example:</u> There are many plants or spices from which the essential oil is extracted by distillation. Among them, <a class="interpop" href="../ingredients/Ylang-Ylang_Extra_EO__Ylang-Ylang_Extra_HE.html" target="_blank">Ylang-Ylang</a>, <a class="interpop" href="../ingredients/Galbanum_EO__Galbanum_HE.html" target="_blank">Galbanum</a> or <a class="interpop" href="../ingredients/Nutmeg_EO__Noix_de_Muscade_HE.html" target="_blank">Nutmeg</a>.</span>
 
-                  <div class="row col-12 mt-2"> 
+                  <div class="row col-12 mt-2 imgingredientblock"> 
                     <img class="offset-2 col-3 imgingredient"
                     src="../img/matieres_premieres/Ylang-Ylang I.jpg" alt="Ylang-Ylang I - Ylang-Ylang I (N°Cas : 8006-81-3)" title="Ylang-Ylang I - Ylang-Ylang I (N°Cas : 8006-81-3)">
                     <img class="offset-1 col-3 imgingredient"
