--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -269,7 +269,7 @@ crossorigin=""/>
               </li>
                 <span lang="fr">Obtenues par entrainement à la vapeur d’eau des composés odorants de la plante. La vapeur d’eau possède effectivement la faculté de se mélanger aux composés odorants, pour s’en séparer par décantation à l’état liquide après condensation des vapeurs.</span>
                 <span lang="en">Obtained by hydrodistillation of the plant's odorous compounds. Steam has the ability to mix with the odorous compounds, to be separated from them by decantation in a liquid state, after condensation of the vapours.</span>
-                <p class="exemple mt-3 mb-0">
+                <p class="exemple mt-2 mb-0">
                   <span lang="fr"><u>Exemple:</u> Il existe de très nombreuses plantes ou épices dont l'huile essentielle est extraite par distillation. Parmi elles, l'<a class="interpop" href="../ingredients/Ylang-Ylang_Extra_EO__Ylang-Ylang_Extra_HE.html" target="_blank">Ylang-Ylang</a>, le <a class="interpop" href="../ingredients/Galbanum_EO__Galbanum_HE.html" target="_blank">Galbanum</a> ou encore la <a class="interpop" href="../ingredients/Nutmeg_EO__Noix_de_Muscade_HE.html" target="_blank">Noix de Muscade</a></span>
                   <span lang="en"><u>Example:</u> There are many plants or spices from which the essential oil is extracted by distillation. Among them, <a class="interpop" href="../ingredients/Ylang-Ylang_Extra_EO__Ylang-Ylang_Extra_HE.html" target="_blank">Ylang-Ylang</a>, <a class="interpop" href="../ingredients/Galbanum_EO__Galbanum_HE.html" target="_blank">Galbanum</a> or <a class="interpop" href="../ingredients/Nutmeg_EO__Noix_de_Muscade_HE.html" target="_blank">Nutmeg</a>.</span>
 
@@ -288,6 +288,16 @@ crossorigin=""/>
               </li>
                 <span lang="fr">Pour le <a class="interpop" href="../ingredients/Cade_EO__Cade_HE.html" target="_blank"> Cade HE </a> (un conifère) et le <a class="interpop" href="../ingredients/Birch_Rectified_EO__Bouleau_Rectifié_HE.html" target="_blank"> Bouleau Rectifié HE </a> (un bois), l’huile essentielle est obtenue par distillation sèche. Cela consiste en une pyrogénation du bois sous une très forte température (800°C environ) dans un four, puis une distillation du goudron récupéré, pour n’obtenir que les composés odorants issus de ce procédé.</span>
                 <span lang="en">For <a class="interpop" href="../ingredients/Cade_EO__Cade_HE.html" target="_blank">Cade EO</a> (a conifer) and <a class="interpop" href="../ingredients/Birch_Rectified_EO__Bouleau_Rectifié_HE.html" target="_blank">Birch EO</a> (a wood), the essential oil is obtained by dry distillation. This consists in a pyrogenation of the wood under a very high temperature (about 800°C) in an oven, followed by a distillation of the tar recovered, to obtain only the odorous compounds resulting from this process.</span>
+                  <p class="exemple mt-2 mb-0">
+                    <span lang="fr"><u>Exemple:</u> Le <a class="interpop" href="../ingredients/Cade_EO__Cade_HE.html" target="_blank"> Cade HE </a> et le <a class="interpop" href="../ingredients/Birch_Rectified_EO__Bouleau_Rectifié_HE.html" target="_blank"> Bouleau Rectifié HE </a> sont les deux seuls ingrédients naturels extraits de cette façon.</span>
+                    <span lang="en"><u>Example:</u> The <a class="interpop" href="../ingredients/Cade_EO__Cade_HE.html" target="_blank"> Cade EO </a> and the <a class="interpop" href="../ingredients/Birch_Rectified_EO__Bouleau_Rectifié_HE.html" target="_blank">Birch EO </a>are the only two natural ingredients extracted by this way.</span>
+                    <div class="row col-12 mt-2 imgingredientblock"> 
+                      <img class="offset-3 col-3 imgingredient"
+                      src="../img/matieres_premieres/Cade HE.jpg" alt="Cade EO - Cade HE (N°Cas : 8013-10-3)" title="Cade EO - Cade HE (N°Cas : 8013-10-3)">
+                      <img class="offset-2 col-3 imgingredient"
+                      src="../img/matieres_premieres/Bouleau Rectifié HE.jpg" alt="Birch Rectified EO - Bouleau Rectifié HE (N°Cas : 84012-15-7)" title="Birch Rectified EO - Bouleau Rectifié HE (N°Cas : 84012-15-7)">
+                    </div>
+                </p>
               <li class="catégories2">
                 <span lang="fr">Les expressions :</span>
                 <span lang="en">Cold pression :</span>
