--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -297,13 +297,27 @@ crossorigin=""/>
                       <img class="offset-2 col-3 imgingredient"
                       src="../img/matieres_premieres/Bouleau Rectifié HE.jpg" alt="Birch Rectified EO - Bouleau Rectifié HE (N°Cas : 84012-15-7)" title="Birch Rectified EO - Bouleau Rectifié HE (N°Cas : 84012-15-7)">
                     </div>
-                </p>
+                  </p>
               <li class="catégories2">
                 <span lang="fr">Les expressions :</span>
                 <span lang="en">Cold pression :</span>
               </li>
                 <span lang="fr">Pour les agrumes, leur huile essentielle est obtenue par expression à froid : le zeste est exprimé, puis l’huile est séparée de l’eau résultante par centrifugation.</span>
                 <span lang="en">For citrus fruits, the essential oil is obtained by cold pression: the peel is expressed, then the oil is separated from the resulting water by centrifugation.</span>
+                <p class="exemple mt-2 mb-0">
+                    <span lang="fr"><u>Exemple:</u> La plupart des agrumes tels que l'<a class="interpop" href="../ingredients/Sweet_Orange_EO__Orange_Douce_HE.html" target="_blank">orange</a>, la <a class="interpop" href="../ingredients/Bergamot_EO__Bergamote_HE.html" target="_blank">bergamote</a>, le <a class="interpop" href="../ingredients/Lemon_EO__Citron_HE.html" target="_blank">citron</a>, ou encore la <a class="interpop" href="../ingredients/Mandarin_Yellow_EO__Mandarine_Jaune_HE.html" target="_blank">mandarine</a> et le <a class="interpop" href="../ingredients/Grapefruit_EO__Pamplemousse_HE.html" target="_blank">pamplemousse</a> sont extrait de cette façon.</span>
+                    <span lang="en"><u>Example:</u> Most of citrus fruits such as <a class="interpop" href="../ingredients/Sweet_Orange_EO__Orange_Douce_HE.html" target="_blank">orange</a>, <a class="interpop" href="../ingredients/Bergamot_EO__Bergamote_HE.html" target="_blank">bergamot</a>, <a class="interpop" href="../ingredients/Lemon_EO__Citron_HE.html" target="_blank">lemon</a>, <a class="interpop" href="../ingredients/Mandarin_Yellow_EO__Mandarine_Jaune_HE.html" target="_blank">mandarin</a> or <a class="interpop" href="../ingredients/Grapefruit_EO__Pamplemousse_HE.html" target="_blank">grapefruits</a> are extracted in this way.</span>
+                    
+                    <div class="row col-12 mt-2 imgingredientblock"> 
+                      <img class="offset-2 col-3 imgingredient"
+                      src="../img/matieres_premieres/Orange Douce HE.jpg" alt="Sweet Orange EO - Orange Douce HE (N°Cas : 8008-57-9)" title="Sweet Orange EO - Orange Douce HE (N°Cas : 8008-57-9)">
+                      <img class="offset-1 col-3 imgingredient"
+                      src="../img/matieres_premieres/Citron HE.jpg" alt="Lemon EO - Citron HE (N°Cas : 8008-56-8)" title="Lemon EO - Citron HE (N°Cas : 8008-56-8)">
+                      <img class="offset-1 col-3 imgingredient"
+                      src="../img/matieres_premieres/Mandarine Jaune HE.jpg" alt="Mandarin Yellow EO - Mandarine Jaune HE (N°Cas : 8008-31-9)" title="Mandarin Yellow EO - Mandarine Jaune HE (N°Cas : 8008-31-9)">
+                    </div>
+                </p>
+
             </ol>
           <li class="catégories">
             <span lang="fr">Les concrètes, absolues et résinoïdes: </span>
