--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -338,6 +338,17 @@ crossorigin=""/>
                 <br>The first consists in plunging the plant in an organic solvent such as hexane or petroleum ether. After this extraction, which can last several hours, the plants are removed from the solvent (they are then said to be "<u>exhausted</u>"). We obtain a mixture of solvent and odorous substances which, after evaporation of the solvent, gives way to a <b class="bplus">concrete</b>. It is a paste because it includes the plant waxes, which have also been extracted by the solvent used. 
                 <br>To make the concrete usable in perfumery, it must be <u>diluted in alcohol</u> to solubilize it, then the mixture is cooled to force the precipitation of the waxes. After a filtering step and a new evaporation of the solvent (alcohol this time), the product obtained is liquid, sometimes viscous, and limpid: this is the <b class="bplus">absolute</b>.
                 <br>These multiple processing and extraction steps lead to an extremely low yield between the initial mass of fresh product and the final absolute mass. This <u>yield rarely exceeds 5%</u>. This is why these products, which are very rich and complex in smell, are also <u>very expensive</u> and must therefore be used with care. </span> 
+                
+                <p class="exemple mt-2 mb-0">
+                    <div class="row col-12 mt-2 imgingredientblock"> 
+                      <img class="offset-2 col-3 imgingredient"
+                      src="../img/matieres_premieres/Rose de Mai Absolue.jpg" alt="Rose de Mai Absolute - Rose de Mai Absolue (N°Cas : 84604-12-6)" title="Rose de Mai Absolute - Rose de Mai Absolue (N°Cas : 84604-12-6)">
+                      <img class="offset-1 col-3 imgingredient"
+                      src="../img/matieres_premieres/Fève Tonka Absolue.jpg" alt="Tonka Bean Absolute - Fève Tonka Absolue (N°Cas : 8046-22-8)" title="Tonka Bean Absolute - Fève Tonka Absolue (N°Cas : 8046-22-8)">
+                      <img class="offset-1 col-3 imgingredient"
+                      src="../img/matieres_premieres/Fenugrec Absolue.jpg" alt="Fenugreek Absolute - Fenugrec Absolue (N°Cas : 68990-15-8)" title="Fenugreek Absolute - Fenugrec Absolue (N°Cas : 68990-15-8)">
+                    </div>
+                </p>
 
               <li class="catégories2" >
                 <span lang="fr">Les résinoïdes :</span>
