--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -356,6 +356,14 @@ crossorigin=""/>
               </li>
                 <span lang="fr">Les résinoïdes résultent de l’extraction d’un <b class="bplus">produit sec</b>. Il s’agit souvent de résines d’arbres (<a class="interpop" href="../ingredients/Siam_Benzoin_Resinoid__Benjoin_Siam_Résinoïde.html" target="_blank">Benjoin Siam Résinoïde</a>). Leur extraction consiste à solubiliser les composés odorants de la résine dans de l’alcool, de refroidir le mélange pour précipiter les cires, puis de filtrer et d’évaporer le solvant. Le produit obtenu est liquide, parfois très visqueux. Ces résines sont souvent aussi extractibles à la vapeur d’eau, pour obtenir une huile essentielle (<a class="interpop" href="../ingredients/Frankincense_EO__Encens_HE.html" target="_blank">Encens HE</a>).</span>
                 <span lang="en">Resinoids result from the extraction of a <b class="bplus">dry product</b>. They are often tree resins (<a class="interpop" href="../ingredients/Siam_Benzoin_Resinoid__Benjoin_Siam_Résinoïde.html" target="_blank">Siam Benzoin Resinoid</a>). Their extraction consists in solubilizing the resin's odorous compounds in alcohol, cooling the mixture to precipitate the waxes, then filtering and evaporating the solvent. The product obtained is liquid, sometimes highly viscous. These resins are often also extractable by steam distillation, to obtain an essential oil (<a class="interpop" href="../ingredients/Frankincense_EO__Encens_HE.html" target="_blank">Frankincense EO</a>).</span>
+                <p class="exemple mt-2 mb-0">
+                    <div class="row col-12 mt-2 imgingredientblock"> 
+                      <img class="offset-3 col-3 imgingredient"
+                      src="../img/matieres_premieres/Benjoin Siam Résinoïde.jpg" alt="Siam Benzoin Resinoid - Benjoin Siam Résinoïde (N°Cas : 9000-72-0)" title="Siam Benzoin Resinoid - Benjoin Siam Résinoïde (N°Cas : 9000-72-0)">
+                      <img class="offset-2 col-3 imgingredient"
+                      src="../img/matieres_premieres/Encens HE.jpg" alt="Frankincense EO - Encens HE (N°Cas : 8016-36-2)" title="Frankincense EO - Encens HE (N°Cas : 8016-36-2)">
+                    </div>
+                </p>
             </ol>  
           <li class="catégories">
             <span lang="fr">Les extraits CO<sub>2</sub> supercritique : </span>
