--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -377,6 +377,14 @@ crossorigin=""/>
         <span lang="fr">Il existe beaucoup d’autres méthodes d’extraction aboutissant sur d'autres catégories d'ingrédients, que nous ne détaillerons pas ici car leur présence n'est pas très courante (hydrolats, exhudats, teintures, infusions, terpene-less, pommades et autres produits issues de distillations moléculaires ou encore les produits modifiés chimiquement après extraction.).</span>
         <span lang="en">There are many other extraction methods leading to other categories of ingredients, which we will not detail here because their usage is not very common (hydrosols, exhudates, tinctures, infusions, terpene-less, ointments and other products resulting from molecular distillation or chemically modified products after extraction).</span>
       </p>
+      <h2 class="sous_titre mt-3">
+        <span lang="fr">Pour résumer :</span>
+        <span lang="en">To sum up :</span>
+      </h2>
+      <p>
+        <img class="" lang="fr" src="../img/RésuméNat.png" alt="Les différentes façons d'obtenir un produit naturel" title="Les différentes façons d'obtenir un produit naturel">
+        <img class="" lang="en" src="../img/SumupNat.png" alt="Les différentes façons d'obtenir un produit naturel" title="Les différentes façons d'obtenir un produit naturel">
+      </p>
       <p>
         <span lang="fr">Ainsi, les matières premières naturelles forment environ un tiers de la palette du parfumeur (sans compter les bases). Elles servent souvent de point de départ d’une création de parfum. Le parfumeur choisi en effet souvent plusieurs matières premières naturelles pour son parfum, autour de laquelle il fait graviter des matières premières synthétiques, pour leur donner les nuances souhaitées.
         <br>Les ingrédients naturels sont olfactivement très complexes, compte tenu de la diversité de molécules qu’ils contiennent. Cela ne facilite donc pas la création. Par ailleurs, bien qu’ils apportent de la beauté à une création, ils lui apportent de l’instabilité, toujours compte tenu des molécules qui peuvent y être présentes. Enfin, leur coût d’obtention n’est pas négligeable. C’est aussi ce paramètre qui a été bouleversé par l’arrivée de la synthèse organique, à la fin du XIXème siècle…</span>
