--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -382,8 +382,8 @@ crossorigin=""/>
         <span lang="en">To sum up :</span>
       </h2>
       <p>
-        <img class="" lang="fr" src="../img/RésuméNat.png" alt="Les différentes façons d'obtenir un produit naturel" title="Les différentes façons d'obtenir un produit naturel">
-        <img class="" lang="en" src="../img/SumupNat.png" alt="Les différentes façons d'obtenir un produit naturel" title="Les différentes façons d'obtenir un produit naturel">
+        <img class="resumenat" lang="fr" src="../img/RésuméNat.png" alt="Les différentes façons d'obtenir un produit naturel" title="Les différentes façons d'obtenir un produit naturel">
+        <img class="resumenat" lang="en" src="../img/SumupNat.png" alt="Les différentes façons d'obtenir un produit naturel" title="Les différentes façons d'obtenir un produit naturel">
       </p>
       <p>
         <span lang="fr">Ainsi, les matières premières naturelles forment environ un tiers de la palette du parfumeur (sans compter les bases). Elles servent souvent de point de départ d’une création de parfum. Le parfumeur choisi en effet souvent plusieurs matières premières naturelles pour son parfum, autour de laquelle il fait graviter des matières premières synthétiques, pour leur donner les nuances souhaitées.
