--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -373,7 +373,7 @@ crossorigin=""/>
             <span lang="en">These ingredients result from the contact of any plant (it can even be some fruits, usually not extracted) with carbon dioxide at over 31°C and 74 bar of pressure. Putting CO<sub>2</sub> in this form is expensive, but this type of extraction provides an awesome olfactory result, and offers to the perfumer's palette high quality extracts</span>    
         </ol>
       </p>
-      <p>
+      <p style="align-items: center;">
         <span lang="fr">Il existe beaucoup d’autres méthodes d’extraction aboutissant sur d'autres catégories d'ingrédients, que nous ne détaillerons pas ici car leur présence n'est pas très courante (hydrolats, exhudats, teintures, infusions, terpene-less, pommades et autres produits issues de distillations moléculaires ou encore les produits modifiés chimiquement après extraction.).</span>
         <span lang="en">There are many other extraction methods leading to other categories of ingredients, which we will not detail here because their usage is not very common (hydrosols, exhudates, tinctures, infusions, terpene-less, ointments and other products resulting from molecular distillation or chemically modified products after extraction).</span>
       </p>
