--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -381,7 +381,7 @@ crossorigin=""/>
         <span lang="fr">Pour résumer :</span>
         <span lang="en">To sum up :</span>
       </h2>
-      <p style="align-items: center;">
+      <p style="text-align: center;">
         <img class="resumenat" lang="fr" src="../img/RésuméNat.png" alt="Les différentes façons d'obtenir un produit naturel" title="Les différentes façons d'obtenir un produit naturel">
         <img class="resumenat" lang="en" src="../img/SumupNat.png" alt="Les différentes façons d'obtenir un produit naturel" title="Les différentes façons d'obtenir un produit naturel">
       </p>
