--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -413,8 +413,8 @@ crossorigin=""/>
           <span lang="fr">Les bases sont des compositions parfumantes, reproduisant une odeur connue, mais souvent non extractible. Elles servent à diversifier la palette du parfumeur, en proposant un plus large choix de matières premières, et en imitant l’odeur d’ingrédients existant ou non, à moindre coût.</span>
           <span lang="en">The bases are perfume compositions, reproducing a known smell, but often not extractable. They make it possible to diversify the perfumer's palette by offering a wider choice of raw materials, and by imitating the smell of existing or non-existing ingredients, at a lower cost.</span>
         <p>
-          <span lang="fr">On distingue les bases imitatrices et les bases créatives :</span>
-          <span lang="en">Imitative and creative bases can be distinguished :</span>
+          <span lang="fr">On distingue plusieurs types de bases :</span>
+          <span lang="en">We can distinguish several type of bases :</span>
 
           <ol style="font-size: 0.8em;" type="A">
             <li class="catégories">
