--- a/html/_/ingredients.html
+++ b/html/_/ingredients.html
@@ -56,7 +56,7 @@ crossorigin=""/>
 </div>
 
 </div>
-<div class="row" lang="fr">
+<div class="row" lang="fr" style="background-color: red:">
 <div class="col-lg-6 text-center" style="background-color: blue;">
   <span><b><u>Ingrédients Naturels : </u></b></span>
   <ul id="listeMP-Ingredients-naturels-FR"></ul>
