--- a/html/_/listingredient.html
+++ b/html/_/listingredient.html
@@ -166,15 +166,18 @@ crossorigin=""/>
 <!-- C'EST ICI QUE COMMENCE LE CODE DE LA PARTIE DE GAUCHE -->
 <div class="col-12 text-center gros_titre">
   <h1 class="gros_titre text-in-color-brown">
-    <span lang="fr">LES INGREDIENTS DE NOS PARFUMS</span>
-    <span lang="en">PERFUME INGREDIENTS</span></h1>
+    <span lang="fr">LES INGREDIENTS DE SCENTREE</span>
+    <span lang="en">SCENTREE INGREDIENTS</span></h1>
 </div>
 
 <hr>
 
 <div class="col-12 pagederoulante text-justify scrollbarblockgauche"> 
 
-
+  <h2 class="sous_titre mt-3">
+    <span lang="fr">Découvrez la liste des ingrédients présents dans ScenTree, par origine et par ordre alphabétique</span>
+    <span lang="en">Discover the list of ingredients in ScenTree, by origin and by alphabetical order.</span>
+  </h2>
 
 </div>
 
