--- a/html/_/listingredient.html
+++ b/html/_/listingredient.html
@@ -179,6 +179,30 @@ crossorigin=""/>
     <span lang="en">Discover the list of ingredients in ScenTree, by origin and by alphabetical order.</span>
   </h2>
 
+<p>
+  <span lang="fr">Chaque semaine, nous rajoutons entre 6 et 8 ingrédients. Afin de vous permettre d'avoir une vue d'ensemble de tous les ingrédients présents dans ScenTree, nous les avons listés ici : </span>
+  <span lang="en">Each week we add between 6 and 8 ingredients. In order to give you an overview of all the ingredients in ScenTree, we have listed them here: </span>
+</p>
+
+<p class="col-12 listblock mt-3" style="background-color: blue;">
+  <div class="col-lg-6 text-center">
+    <span><b class="bplus">Naturals : </b></span>
+    <ul id="listeMP-Ingredients-naturels-EN"></ul>
+  </div>
+  <div class="col-lg-6 text-center">
+    <span><b><u>Synthetics :</u></b></span>
+    <ul id="listeMP-Ingredients-synthetiques-EN"></ul>
+  </div>
+  <div class="col-lg-6 text-center" style="background-color: blue;">
+    <span><b class="bplus">Ingrédients Naturels : </b></span>
+    <ul id="listeMP-Ingredients-naturels-FR"></ul>
+  </div>
+  <div class="col-lg-6 text-center">
+    <span><b class="bplus">Ingrédients Synthétiques : </b></span>
+    <ul id="listeMP-Ingredients-synthetiques-FR"></ul>
+  </div>
+</p>
+
 </div>
 
 
