--- a/html/_/listingredient.html
+++ b/html/_/listingredient.html
@@ -190,7 +190,7 @@ crossorigin=""/>
     <ul id="listeMP-Ingredients-naturels-EN"></ul>
   </div>
   <div class="col-lg-6 text-center">
-    <span><b><u>Synthetics :</u></b></span>
+    <span><b class="bplus">Synthetics :</b></span>
     <ul id="listeMP-Ingredients-synthetiques-EN"></ul>
   </div>
   <div class="col-lg-6 text-center" style="background-color: blue;">
