--- a/html/_/listingredient.html
+++ b/html/_/listingredient.html
@@ -184,15 +184,7 @@ crossorigin=""/>
   <span lang="en">Each week we add between 6 and 8 ingredients. In order to give you an overview of all the ingredients in ScenTree, we have listed them here: </span>
 </p>
 
-<p class="col-12 listblock mt-3" style="background-color: blue;">
-  <div class="col-lg-6 text-center">
-    <span><b class="bplus">Naturals : </b></span>
-    <ul id="listeMP-Ingredients-naturels-EN"></ul>
-  </div>
-  <div class="col-lg-6 text-center">
-    <span><b class="bplus">Synthetics :</b></span>
-    <ul id="listeMP-Ingredients-synthetiques-EN"></ul>
-  </div>
+<p lang="fr" class="row listblock mt-3">
   <div class="col-lg-6 text-center" style="background-color: blue;">
     <span><b class="bplus">Ingrédients Naturels : </b></span>
     <ul id="listeMP-Ingredients-naturels-FR"></ul>
