--- a/html/_/listingredient.html
+++ b/html/_/listingredient.html
@@ -194,6 +194,21 @@ crossorigin=""/>
     <ul id="listeMP-Ingredients-synthetiques-FR"></ul>
   </div>
 </p>
+<p lang="fr" class="row col-12 listblock mt-3">
+  <div class="col-6 text-center" style="background-color: blue;">
+    <span><b class="bplus">Ingrédients Naturels : </b></span>
+    <ul id="listeMP-Ingredients-naturels-FR"></ul>
+  </div>
+  <div class="col-6 text-center">
+    <span><b class="bplus">Ingrédients Synthétiques : </b></span>
+    <ul id="listeMP-Ingredients-synthetiques-FR"></ul>
+  </div>
+</p>
+
+<p>
+  <span lang="fr">Pour en savoir d'avantage sur les différents types d'ingrédients, lisez notre <a href="../ingredientparfums.html" target="_BLANK">article</a> sur le sujet</span>
+  <span lang="en">To find out more about the different types of ingredients, read our <a href="../ingredientparfums.html" target="_BLANK">article</a> on the topic</span>
+</p>
 
 </div>
 
