--- a/html/_/listingredient.html
+++ b/html/_/listingredient.html
@@ -194,14 +194,14 @@ crossorigin=""/>
     <ul id="listeMP-Ingredients-synthetiques-FR"></ul>
   </div>
 </p>
-<p lang="fr" class="row col-12 listblock mt-3">
+<p lang="en" class="row col-12 listblock mt-3">
   <div class="col-6 text-center" style="background-color: blue;">
     <span><b class="bplus">Ingrédients Naturels : </b></span>
-    <ul id="listeMP-Ingredients-naturels-FR"></ul>
+    <ul id="listeMP-Ingredients-naturels-EN"></ul>
   </div>
   <div class="col-6 text-center">
     <span><b class="bplus">Ingrédients Synthétiques : </b></span>
-    <ul id="listeMP-Ingredients-synthetiques-FR"></ul>
+    <ul id="listeMP-Ingredients-synthetiques-EN"></ul>
   </div>
 </p>
 
