--- a/html/_/listingredient.html
+++ b/html/_/listingredient.html
@@ -194,17 +194,16 @@ crossorigin=""/>
     <ul id="listeMP-Ingredients-synthetiques-FR"></ul>
   </div>
 </p>
-<p lang="en" class="row col-12 listblock mt-3">
-  <div class="col-6 text-center" style="background-color: blue;">
-    <span><b class="bplus">Ingrédients Naturels : </b></span>
+<div class="row" lang="en">
+  <div class="col-lg-6 text-center">
+    <span><b><u>Naturals : </u></b></span>
     <ul id="listeMP-Ingredients-naturels-EN"></ul>
   </div>
-  <div class="col-6 text-center">
-    <span><b class="bplus">Ingrédients Synthétiques : </b></span>
+  <div class="col-lg-6 text-center">
+    <span><b><u>Synthetics :</u></b></span>
     <ul id="listeMP-Ingredients-synthetiques-EN"></ul>
   </div>
-</p>
-
+</div>
 <p>
   <span lang="fr">Pour en savoir d'avantage sur les différents types d'ingrédients, lisez notre <a href="../ingredientparfums.html" target="_BLANK">article</a> sur le sujet</span>
   <span lang="en">To find out more about the different types of ingredients, read our <a href="../ingredientparfums.html" target="_BLANK">article</a> on the topic</span>
