--- a/html/_/listingredient.html
+++ b/html/_/listingredient.html
@@ -208,7 +208,9 @@ crossorigin=""/>
     <ul id="listeMP-Ingredients-synthetiques-EN"></ul>
   </div>
 </div>
-<p>
+
+
+<p class="mt-3">
   <span lang="fr">Pour en savoir d'avantage sur les différents types d'ingrédients, lisez notre <a href="../ingredientparfums.html" target="_BLANK">article</a> sur le sujet</span>
   <span lang="en">To find out more about the different types of ingredients, read our <a href="../ingredientparfums.html" target="_BLANK">article</a> on the topic</span>
 </p>
