--- a/html/_/listingredient.html
+++ b/html/_/listingredient.html
@@ -184,12 +184,12 @@ crossorigin=""/>
   <span lang="en">Each week we add between 6 and 8 ingredients. In order to give you an overview of all the ingredients in ScenTree, we have listed them here: </span>
 </p>
 
-<div lang="fr" class="col-12 listblock mt-3">
-  <div class="col-6 text-center" style="background-color: blue;">
+<div lang="fr" class="row col-12 listblock mt-3">
+  <div class="offset-1 col-5 text-center" style="background-color: blue;">
     <span><b class="bplus">Ingrédients Naturels : </b></span>
     <ul id="listeMP-Ingredients-naturels-FR"></ul>
   </div>
-  <div class="col-6 text-center">
+  <div class="offset-1 col-5 text-center">
     <span><b class="bplus">Ingrédients Synthétiques : </b></span>
     <ul id="listeMP-Ingredients-synthetiques-FR"></ul>
   </div>
