--- a/html/_/listingredient.html
+++ b/html/_/listingredient.html
@@ -184,31 +184,32 @@ crossorigin=""/>
   <span lang="en">Each week we add between 6 and 8 ingredients. In order to give you an overview of all the ingredients in ScenTree, we have listed them here: </span>
 </p>
 
-<div lang="fr" class="row listblock mt-3">
-  <div class="offset-1 col-5 text-center" style="background-color: blue;">
-    <span><b class="bplus">Ingrédients Naturels : </b></span>
-    <ul id="listeMP-Ingredients-naturels-FR"></ul>
+
+<div class="row listblock mt-3">
+
+  <div class="col-12" lang="fr" style="background-color: blue;">
+    <div class="col-6 text-center">
+      <span><b class="bplus">Ingrédients Naturels : </b></span>
+      <ul id="listeMP-Ingredients-naturels-FR"></ul>
+    </div>
+    <div class="col-6 text-center">
+      <span><b class="bplus">Ingrédients Synthétiques : </b></span>
+      <ul id="listeMP-Ingredients-synthetiques-FR"></ul>
+    </div>
   </div>
-  <div class="offset-1 col-5 text-center">
-    <span><b class="bplus">Ingrédients Synthétiques : </b></span>
-    <ul id="listeMP-Ingredients-synthetiques-FR"></ul>
+
+  <div class="col-12" lang="en" style="background-color: blue;">
+    <div class="col-lg-6 text-center">
+      <span><b class="bplus">Naturals : </b></span>
+      <ul id="listeMP-Ingredients-naturels-EN"></ul>
+    </div>
+    <div class="col-lg-6 text-center">
+      <span><b class="bplus">Synthetics :</b></span>
+      <ul id="listeMP-Ingredients-synthetiques-EN"></ul>
+    </div>
   </div>
+  
 </div>
-
-
-
-
-<div class="row" lang="en">
-  <div class="col-lg-6 text-center">
-    <span><b><u>Naturals : </u></b></span>
-    <ul id="listeMP-Ingredients-naturels-EN"></ul>
-  </div>
-  <div class="col-lg-6 text-center">
-    <span><b><u>Synthetics :</u></b></span>
-    <ul id="listeMP-Ingredients-synthetiques-EN"></ul>
-  </div>
-</div>
-
 
 <p class="mt-3">
   <span lang="fr">Pour en savoir d'avantage sur les différents types d'ingrédients, lisez notre <a href="../ingredientparfums.html" target="_BLANK">article</a> sur le sujet</span>
