--- a/html/_/listingredient.html
+++ b/html/_/listingredient.html
@@ -188,11 +188,11 @@ crossorigin=""/>
 <div class="row listblock mt-3">
 
   <div class="col-12" lang="fr" style="background-color: blue;">
-    <div class="col-6 text-center">
+    <div class="col-6 text-center" style="background-color: yellow;">
       <span><b class="bplus">Ingrédients Naturels : </b></span>
       <ul id="listeMP-Ingredients-naturels-FR"></ul>
     </div>
-    <div class="col-6 text-center">
+    <div class="col-6 text-center" style="background-color: red;">
       <span><b class="bplus">Ingrédients Synthétiques : </b></span>
       <ul id="listeMP-Ingredients-synthetiques-FR"></ul>
     </div>
@@ -208,7 +208,7 @@ crossorigin=""/>
       <ul id="listeMP-Ingredients-synthetiques-EN"></ul>
     </div>
   </div>
-  
+
 </div>
 
 <p class="mt-3">
