--- a/html/_/listingredient.html
+++ b/html/_/listingredient.html
@@ -187,7 +187,7 @@ crossorigin=""/>
 
 <div class="row listblock mt-3">
 
-  <div class="col-12" lang="fr" style="background-color: blue;">
+  <div class="row col-12" lang="fr" style="background-color: blue;">
     <div class="col-6 text-center" style="background-color: yellow;">
       <span><b class="bplus">Ingrédients Naturels : </b></span>
       <ul id="listeMP-Ingredients-naturels-FR"></ul>
