--- a/html/_/listingredient.html
+++ b/html/_/listingredient.html
@@ -188,12 +188,12 @@ crossorigin=""/>
 <div class="row listblock mt-3">
 
   <div class="row col-12" lang="fr" style="background-color: blue;">
-    <div class="col-6 text-center" style="background-color: yellow;">
-      <span><b class="bplus">Ingrédients Naturels : </b></span>
+    <div class="col-6">
+      <span class="text-center"><b class="bplus">Ingrédients Naturels : </b></span>
       <ul id="listeMP-Ingredients-naturels-FR"></ul>
     </div>
-    <div class="col-6 text-center" style="background-color: red;">
-      <span><b class="bplus">Ingrédients Synthétiques : </b></span>
+    <div class="col-6">
+      <span class="text-center"><b class="bplus">Ingrédients Synthétiques : </b></span>
       <ul id="listeMP-Ingredients-synthetiques-FR"></ul>
     </div>
   </div>
