--- a/html/_/listingredient.html
+++ b/html/_/listingredient.html
@@ -185,9 +185,9 @@ crossorigin=""/>
 </p>
 
 
-<div class="row listblock mt-3">
+<div class="container-fluid listblock mt-3">
 
-  <div class="row col-12" lang="fr" style="background-color: blue;">
+  <div class="col-12" lang="fr" style="background-color: blue;">
     <div class="col-6">
       <span class="text-center"><b class="bplus">Ingrédients Naturels : </b></span>
       <ul id="listeMP-Ingredients-naturels-FR"></ul>
