--- a/html/_/listingredient.html
+++ b/html/_/listingredient.html
@@ -185,6 +185,14 @@ crossorigin=""/>
 </p>
 
 
+<div class="container">
+  <div class="row">
+    <div class="col-lg-4">4 colonnes</div>
+    <div class="col-lg-8">8 colonnes</div>
+  </div>
+</div>
+
+<!--
 <div class="container-fluid listblock mt-3">
 
   <div class="col-12" lang="fr" style="background-color: blue;">
@@ -209,7 +217,7 @@ crossorigin=""/>
     </div>
   </div>
 
-</div>
+</div>-->
 
 <p class="mt-3">
   <span lang="fr">Pour en savoir d'avantage sur les différents types d'ingrédients, lisez notre <a href="../ingredientparfums.html" target="_BLANK">article</a> sur le sujet</span>
